--- a/index.html
+++ b/index.html
@@ -20,6 +20,25 @@
 
     </header>
     <main class="main">
+        <section class="main-01">
+            <div class="women-img">
+                <img src="/images/person.png" alt="">
+            </div>
+            <div class="main-01-brief">
+                <h3 class="main-01-heading">My failures of previous year</h3>
+                <p class="main-01-description">Contrary to popular belief, Lorem Ipsum is not simply random text. It has roots in a piece of classical Latin literature from 45 BC, making it over 2000 years old. Richard McClintock.</p>
+                <ul class="main-01-ulist">
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular belief.</li>
+                    <li>Contrary to popular , is not simply.</li>
+                    <li>Contrary to popular belief, is not simply.</li>
+                    <li>Contrary to popular simply.</li>
+                </ul>
+
+
+            </div>
+
+        </section>
 
     </main>
     <footer class="footer">
