--- a/index.html
+++ b/index.html
@@ -15,9 +15,7 @@
                 <p class="title-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
                 <button class="header-btn"> <span class="btn-description">Contact Us</span></button>
             </div>
-
         </section>
-
     </header>
     <main class="main">
         <section class="main-01">
@@ -34,11 +32,21 @@
                     <li>Contrary to popular belief, is not simply.</li>
                     <li>Contrary to popular simply.</li>
                 </ul>
-
+            </div>
+       </section>
+       <section class="main-02">
+        <div class="main-02-heading">
+            <h3 class="myplans">My Plans</h3>
+            <div class="web">
+                <img src="/images/icons/web.png" alt="" class="web-img">
+                <h5 class="web-heading">Web Development</h5>
+                <p class="web-description">I want to Start</p>
 
             </div>
 
-        </section>
+        </div>
+
+       </section>
 
     </main>
     <footer class="footer">
