--- a/index.html
+++ b/index.html
@@ -41,9 +41,12 @@
                 <img src="/images/icons/web.png" alt="" class="web-img">
                 <h5 class="web-heading">Web Development</h5>
                 <p class="web-description">I want to Start</p>
-
             </div>
-
+            <div class="js">
+                <img src="/images/icons/js.png" alt="" class="js-img">
+                <h5 class="js-heading">Javascript</h5>
+                <p class="js-description">I want to Learn</p>
+            </div>
         </div>
 
        </section>
