Main-02 full part upload

--- a/index.html
+++ b/index.html
@@ -40,15 +40,24 @@
             <div class="web">
                 <img src="/images/icons/web.png" alt="" class="web-img">
                 <h5 class="web-heading">Web Development</h5>
-                <p class="web-description">I want to Start</p>
+                <p class="web-description">I want to start</p>
             </div>
             <div class="js">
                 <img src="/images/icons/js.png" alt="" class="js-img">
                 <h5 class="js-heading">Javascript</h5>
-                <p class="js-description">I want to Learn</p>
+                <p class="js-description">I want to learn</p>
+            </div>
+            <div class="smoke">
+                <img src="/images/icons/smoke.png" alt="" class="smoke-img">
+                <h5 class="smoke-heading">Smoking Habit</h5>
+                <p class="smoke-description">I want to end</p>
+            </div>
+            <div class="ecom">
+                <img src="/images/icons/ecom.png" alt="" class="ecom-img">
+                <h5 class="ecom-heading">ecommerce</h5>
+                <p class="ecom-description">I want to develop</p>
             </div>
         </div>
-
        </section>
 
     </main>
