--- a/index.html
+++ b/index.html
@@ -59,10 +59,36 @@
             </div>
         </div>
        </section>
+       <section class="main-03">
+        <div class="main-03-always">
+            <h3 class="main-03-heading">Always keep a positive mind set</h3>
+            <button class="main-03-btn"> <span class="txt">Call Now</span></button>
+        </div>
+
+       </section>
 
     </main>
     <footer class="footer">
-
+        <section>
+        <div class="footer-part-01">
+            <h3 class="footer-h3">Future</h3>
+            <p class="footer-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
+            <p class="mail">Email : info@gmail.com</p>
+            <p class="phone">Phone : 01500 00 00 00</p>
+            <img src="/images/icons/fb.png" alt="" class="fb">
+            <img src="/images/icons/twitter.png" alt="" class="tw">
+            <img src="/images/icons/youtube.png" alt="" class="yt">
+        </div>
+        <div class="footer-part-02">
+            <h4 class="footer-h4">Subscribe</h4>
+            <label for="Email">
+                <input type="email" name="Enter Your Mail" id="Your Mail Address" value="Enter Your Mail"> 
+            </label>
+            <br>
+            <br>
+            <button class="footer-btn"><span class="btn-txt">Subscribe</span></button>
+        </div>
+        </section>
     </footer>
 
 </body>
