--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
     <main class="main">
         <section class="main-01">
             <div class="women-img">
-                <img src="/images/person.png" alt="">
+                <img src="./images/person.png" alt="">
             </div>
             <div class="main-01-brief">
                 <h3 class="main-01-heading">My failures of previous year</h3>
@@ -38,22 +38,22 @@
         <div class="main-02-heading">
             <h3 class="myplans">My Plans</h3>
             <div class="web">
-                <img src="/images/icons/web.png" alt="" class="web-img">
+                <img src="./images/icons/web.png" alt="" class="web-img">
                 <h5 class="web-heading">Web Development</h5>
                 <p class="web-description">I want to start</p>
             </div>
             <div class="js">
-                <img src="/images/icons/js.png" alt="" class="js-img">
+                <img src="./images/icons/js.png" alt="" class="js-img">
                 <h5 class="js-heading">Javascript</h5>
                 <p class="js-description">I want to learn</p>
             </div>
             <div class="smoke">
-                <img src="/images/icons/smoke.png" alt="" class="smoke-img">
+                <img src="./images/icons/smoke.png" alt="" class="smoke-img">
                 <h5 class="smoke-heading">Smoking Habit</h5>
                 <p class="smoke-description">I want to end</p>
             </div>
             <div class="ecom">
-                <img src="/images/icons/ecom.png" alt="" class="ecom-img">
+                <img src="./images/icons/ecom.png" alt="" class="ecom-img">
                 <h5 class="ecom-heading">ecommerce</h5>
                 <p class="ecom-description">I want to develop</p>
             </div>
@@ -75,9 +75,9 @@
             <p class="footer-description">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
             <p class="mail">Email : info@gmail.com</p>
             <p class="phone">Phone : 01500 00 00 00</p>
-            <img src="/images/icons/fb.png" alt="" class="fb">
-            <img src="/images/icons/twitter.png" alt="" class="tw">
-            <img src="/images/icons/youtube.png" alt="" class="yt">
+            <img src="./images/icons/fb.png" alt="" class="fb">
+            <img src="./images/icons/twitter.png" alt="" class="tw">
+            <img src="./images/icons/youtube.png" alt="" class="yt">
         </div>
         <div class="footer-part-02">
             <h4 class="footer-h4">Subscribe</h4>
